desafio complementario terminado

--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>JS</title>
-    <script src="./index.js"></script>
 </head>
 <body>
-    <h1>hola mundo</h1>
-    
+    <!-- ---------- PROYECTO PENDIENTE PARA EL PROXIMO TRABAJO ENTREGABLE---------  -->
+    <!-- <main>
+        <h2>Iniciar sesion</h2>
+        <div class="input-group">
+            <input required="" type="text" name="text" autocomplete="off" class="input">
+            <label class="user-label">Usuario</label>
+        </div>
+        <br>
+        <div class="input-group">
+            <input required="" type="password" name="text" autocomplete="off" class="input">
+            <label class="user-label">Clave</label>
+        </div>
+        <br>
+        <button> Button
+        </button>
+        <br>
+        <br>
+        <h2>Registrate</h2>
+        <div class="input-group">
+            <input required="" type="text" name="text" autocomplete="off" class="input">
+            <label class="user-label">Usuarion</label>
+        </div>
+        <br>
+        <div class="input-group">
+            <input required="" type="password" name="text" autocomplete="off" class="input">
+            <label class="user-label">Clave</label>
+        </div>
+        <br>
+        <button> Button
+        </button>
+    </main> -->
+    <script src="./js/index.js"></script>
 </body>
 </html>
